# solana-indexer

./: .gitignore  dump.rdb  package-lock.json  package.json  pnpm-lock.yaml
backend/: Cargo.toml
backend/api_server/: Cargo.toml
backend/api_server/src/: main.rs
backend/grpc_listener/: Cargo.toml
backend/grpc_listener/src/: main.rs
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250827_144108_remmoving_null_contraint.rs
backend/queue_worker/: Cargo.toml
backend/queue_worker/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/migration/src/: m20250828_073444_init_tables.rs
backend/shared/src/: lib.rs
backend/shared/src/elasticsearch/: client.rs
backend/shared/src/entities/: mint.rs  nft_creator.rs  nft_metadata.rs  nft_royalty.rs  token_account.rs
backend/shared/src/helius/: client.rs
backend/shared/src/redis/: queue_manager.rs  worker.rs
backend/shared/src/types/: elasticsearch.rs  helius.rs  metadeta.rs  mint.rs
backend/shared/src/ys_grpc/: grpc_client.rs
backend/src/: main.rs
backend/src/elasticsearch/: client.rs
backend/src/entities/: mint.rs  mod.rs  nft_creator.rs  nft_json_metadata.rs  nft_metadata.rs  nft_ownership.rs  nft_royalty.rs  token_account.rs
backend/src/helius/: client.rs
backend/src/redis/: mod.rs  queue_manager.rs  worker.rs
backend/src/types/: elasticsearch.rs  helius.rs  metadeta.rs  mint.rs  mod.rs
backend/src/ys_grpc/: grpc_client.rs
src/components/layout/: Footer.tsx  Header.tsx
src/components/ui/: HeroSection.tsx  NFTCard.tsx  NFTDetailModal.tsx  NFTGrid.tsx  SearchDropdown.tsx  SearchFilters.tsx  TrendingCollections.tsx
src/hooks/: useSearch.tsx
src/pages/: index.tsx
src/pages/api/magic-eden/: [...path].ts
src/services/: magicEdenAPI.ts
src/styles/: globals.css
src/types/: index.ts
