[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
futures = "0.3.31"
mpl-token-metadata = "5.1.0"
redis = {version = "0.32.4", features = ["tokio-comp", "json"]}
sea-orm = "1.1.14"
serde = "1.0.219"
serde_json = "1.0.142"
solana-client = "2.3.6"
solana-program = "2.3.0"
tokio = {version = "1.46.1", features = ["full"]}
tokio-stream = "0.1.17"
tonic = "0.13.1"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
