[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
borsh = "1.5.7"
bs58 = "0.5.1"
dotenvy = "0.15.7"
elasticsearch = "9.1.0-alpha.1"
futures = "0.3.31"
mpl-token-metadata = "5.1.0"
redis = {version = "0.32.4", features = ["tokio-comp", "json"]}
reqwest = "0.12.23"
sea-orm = {version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
serde = "1.0.219"
serde_json = "1.0.142"
solana-client = "2.3.6"
solana-program = "2.3.0"
solana-transaction-status = "2.3.7"
tokio = {version = "1.46.1", features = ["full"]}
tokio-stream = "0.1.17"
tonic = "0.13.1"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
