[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
dotenvy = "0.15.7"
tokio = { version = "1.46.1", features = ["full"] }
axum = "0.8.4"
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
